--- a/src/app/shared/components/topo/topo.component.html
+++ b/src/app/shared/components/topo/topo.component.html
@@ -1,16 +1,26 @@
-<mat-sidenav-container class="sidenav-container" (backdropClick)="closeSideNav()">
-  <mat-sidenav #sidenav class="sidenav" fixedInViewport="true" >
+<mat-sidenav-container
+  class="sidenav-container"
+  (backdropClick)="closeSideNav()"
+>
+  <mat-sidenav #sidenav class="sidenav" fixedInViewport="true">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list (click)="closeSideNav()">
       <a mat-list-item [routerLink]="['/filmes/listagem']">Inicial</a>
       <mat-divider></mat-divider>
-      <a mat-list-item [routerLink]="['/filmes/cadastro']">Cadastrar novo Filme</a>
+      <a mat-list-item [routerLink]="['/filmes/cadastro']"
+        >Cadastrar novo Filme</a
+      >
       <mat-divider></mat-divider>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary" class="header-toolbar">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="openSideNav()">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="openSideNav()"
+      >
         <mat-icon aria-label="Side nav toggle icon"> menu</mat-icon>
       </button>
       <span>Minha Lista de Filmes</span>
@@ -23,11 +33,8 @@
       <router-outlet></router-outlet>
     </div>
     <dio-rodape></dio-rodape>
-
   </mat-sidenav-content>
-
 </mat-sidenav-container>
-
 
 <mat-menu #menu="matMenu">
   <button mat-menu-item>
