--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.html
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.html
@@ -1,17 +1,20 @@
 <mat-toolbar class="app-title">Filmes Cadastrados</mat-toolbar>
 <div class="home-content">
-
   <mat-card class="home-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Angular Material @ngrx</mat-card-title>
       <mat-card-subtitle>Check this Home</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="../assets/images/angular-material-post.png" alt="Angular Material 7">
+    <img
+      mat-card-image
+      src="../assets/images/angular-material-post.png"
+      alt="Angular Material 7"
+    />
     <mat-card-content>
       <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then
-        you can see sidenav content (with the current store value)
+        Angular Material with @ngrx and lazy loading, click OPEN button then you
+        can see sidenav content (with the current store value)
       </p>
     </mat-card-content>
     <mat-card-actions>
@@ -25,11 +28,15 @@
       <mat-card-title>Angular Material @ngrx</mat-card-title>
       <mat-card-subtitle>Check this Home</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="../assets/images/angular-material-post.png" alt="Angular Material 7">
+    <img
+      mat-card-image
+      src="../assets/images/angular-material-post.png"
+      alt="Angular Material 7"
+    />
     <mat-card-content>
       <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then
-        you can see sidenav content (with the current store value)
+        Angular Material with @ngrx and lazy loading, click OPEN button then you
+        can see sidenav content (with the current store value)
       </p>
     </mat-card-content>
     <mat-card-actions>
@@ -43,11 +50,15 @@
       <mat-card-title>Angular Material @ngrx</mat-card-title>
       <mat-card-subtitle>Check this Home</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="../assets/images/angular-material-post.png" alt="Angular Material 7">
+    <img
+      mat-card-image
+      src="../assets/images/angular-material-post.png"
+      alt="Angular Material 7"
+    />
     <mat-card-content>
       <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then
-        you can see sidenav content (with the current store value)
+        Angular Material with @ngrx and lazy loading, click OPEN button then you
+        can see sidenav content (with the current store value)
       </p>
     </mat-card-content>
     <mat-card-actions>
@@ -61,18 +72,21 @@
       <mat-card-title>Angular Material @ngrx</mat-card-title>
       <mat-card-subtitle>Check this Home</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="../assets/images/angular-material-post.png" alt="Angular Material 7">
+    <img
+      mat-card-image
+      src="../assets/images/angular-material-post.png"
+      alt="Angular Material 7"
+    />
     <mat-card-content>
       <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then
-        you can see sidenav content (with the current store value)
+        Angular Material with @ngrx and lazy loading, click OPEN button then you
+        can see sidenav content (with the current store value)
       </p>
     </mat-card-content>
     <mat-card-actions>
       <button color="accent" (click)="open()" mat-raised-button>OPEN</button>
     </mat-card-actions>
   </mat-card>
-
 
   <mat-card class="home-card">
     <mat-card-header>
@@ -80,16 +94,19 @@
       <mat-card-title>Angular Material @ngrx</mat-card-title>
       <mat-card-subtitle>Check this Home</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="../assets/images/angular-material-post.png" alt="Angular Material 7">
+    <img
+      mat-card-image
+      src="../assets/images/angular-material-post.png"
+      alt="Angular Material 7"
+    />
     <mat-card-content>
       <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then
-        you can see sidenav content (with the current store value)
+        Angular Material with @ngrx and lazy loading, click OPEN button then you
+        can see sidenav content (with the current store value)
       </p>
     </mat-card-content>
     <mat-card-actions>
       <button color="accent" (click)="open()" mat-raised-button>OPEN</button>
     </mat-card-actions>
   </mat-card>
-
 </div>
