✨ chore: capturando eventos de submit/reset

--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -1,7 +1,11 @@
 <mat-toolbar class="app-title">Cadastrar Filme</mat-toolbar>
 <div class="main-div">
   <mat-card class="center width50">
-    <form [formGroup]="cadastro">
+    <form
+      [formGroup]="cadastro"
+      (ngSubmit)="salvar()"
+      (ngReset)="reiniciarForm()"
+    >
       <mat-card-content>
         <mat-form-field class="full-width">
           <input
@@ -74,8 +78,8 @@
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions>
-        <button color="accent" mat-raised-button>Salvar</button>
-        <button color="warn" mat-raised-button>Cancelar</button>
+        <button color="accent" type="submit" mat-raised-button>Salvar</button>
+        <button color="warn" type="reset" mat-raised-button>Cancelar</button>
       </mat-card-actions>
     </form>
   </mat-card>
