🔧 refactor: Validacão error de campo com serviço

--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -14,25 +14,13 @@
             formControlName="titulo"
             placeholder="Título *"
           />
-          <mat-error
-            *ngIf="
-              (cadastro.touched || cadastro.dirty) && f.titulo.errors?.required
-            "
-          >
+          <mat-error *ngIf="validarCampo(f.titulo, 'required')">
             Título é obrigatório
           </mat-error>
-          <mat-error
-            *ngIf="
-              (cadastro.touched || cadastro.dirty) && f.titulo.errors?.minlength
-            "
-          >
+          <mat-error *ngIf="validarCampo(f.titulo, 'minlength')">
             Campo precisa possuir pelo menos 2 caracteres
           </mat-error>
-          <mat-error
-            *ngIf="
-              (cadastro.touched || cadastro.dirty) && f.titulo.errors?.maxlength
-            "
-          >
+          <mat-error *ngIf="validarCampo(f.titulo, 'maxlength')">
             Campo precisa possuir no máximo 256 caracteres
           </mat-error>
         </mat-form-field>
@@ -43,12 +31,7 @@
             formControlName="urlFoto"
             placeholder="Link Foto"
           />
-          <mat-error
-            *ngIf="
-              (cadastro.touched || cadastro.dirty) &&
-              f.urlFoto.errors?.minlength
-            "
-          >
+          <mat-error *ngIf="f.urlFoto.errors?.minlength">
             Campo precisa possuir pelo menos 10 caracteres
           </mat-error>
         </mat-form-field>
@@ -62,12 +45,7 @@
             placeholder="Data de Lançamento *"
             (click)="picker.open()"
           />
-          <mat-error
-            *ngIf="
-              (cadastro.touched || cadastro.dirty) &&
-              f.dtLancamento.errors?.required
-            "
-          >
+          <mat-error *ngIf="f.dtLancamento.errors?.required">
             A data é obrigatória
           </mat-error>
           <mat-datepicker-toggle
@@ -96,21 +74,13 @@
             step="0.1"
           />
 
-          <mat-error
-            *ngIf="
-              (cadastro.touched || cadastro.dirty) && f.nota.errors?.required
-            "
-          >
+          <mat-error *ngIf="validarCampo(f.nota, 'required')">
             Nota é obrigatória
           </mat-error>
-          <mat-error
-            *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors?.min"
-          >
+          <mat-error *ngIf="validarCampo(f.nota, 'min')">
             A nota precisa ser maior ou igual a 0
           </mat-error>
-          <mat-error
-            *ngIf="(cadastro.touched || cadastro.dirty) && f.nota.errors?.max"
-          >
+          <mat-error *ngIf="validarCampo(f.nota, 'max')">
             A nota não pode ultrapassar o valor 10
           </mat-error>
         </mat-form-field>
@@ -121,11 +91,7 @@
             formControlName="urlIMDb"
             placeholder="Link IMDb"
           />
-          <mat-error
-            *ngIf="
-              (cadastro.touched || cadastro.dirty) && f.titulo.errors?.minlength
-            "
-          >
+          <mat-error *ngIf="validarCampo(f.titulo, 'minlength')">
             Campo precisa possuir pelo menos 10 caracteres
           </mat-error>
         </mat-form-field>
@@ -133,18 +99,12 @@
           <mat-select placeholder="Gênero" formControlName="genero">
             <mat-option value="Ação">Açao</mat-option>
             <mat-option value="Aventura">Aventura</mat-option>
-            <mat-option value=">Ficção Científica"
-              >Ficção Científica</mat-option
-            >
+            <mat-option value="Ficção Científica">Ficção Científica</mat-option>
             <mat-option value="Romance">Romance</mat-option>
             <mat-option value="Terror">Terror</mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-error
-          *ngIf="
-            (cadastro.touched || cadastro.dirty) && f.titulo.errors?.required
-          "
-        >
+        <mat-error *ngIf="validarCampo(f.titulo, 'required')">
           Gênero é obrigatório
         </mat-error>
       </mat-card-content>
