--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -7,23 +7,12 @@
       (ngReset)="reiniciarForm()"
     >
       <mat-card-content>
-        <mat-form-field class="full-width">
-          <input
-            matInput
-            name="titulo"
-            formControlName="titulo"
-            placeholder="Título *"
-          />
-          <mat-error *ngIf="validarCampo(f.titulo, 'required')">
-            Título é obrigatório
-          </mat-error>
-          <mat-error *ngIf="validarCampo(f.titulo, 'minlength')">
-            Campo precisa possuir pelo menos 2 caracteres
-          </mat-error>
-          <mat-error *ngIf="validarCampo(f.titulo, 'maxlength')">
-            Campo precisa possuir no máximo 256 caracteres
-          </mat-error>
-        </mat-form-field>
+        <dio-input-text
+          titulo="Título *"
+          controlName="titulo"
+          [formGroup]="cadastro"
+        ></dio-input-text>
+
         <mat-form-field class="full-width">
           <input
             matInput
