🐛 bugfix: Correção formControlName em input-text

--- a/src/app/shared/components/campos/input-text/input-text.component.html
+++ b/src/app/shared/components/campos/input-text/input-text.component.html
@@ -3,7 +3,7 @@
     <input
       matInput
       [name]="controlName"
-      formControlName="titulo"
+      [formControlName]="controlName"
       [placeholder]="titulo"
     />
     <mat-error *ngIf="validarCampo(formControl, 'required')">
