🚧 refactor: Criação componente base para Inputs

--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -60,7 +60,7 @@
         </mat-form-field>
 
         <dio-input-number
-          [titulo]="'Nota IMDb *'"
+          [label]="'Nota IMDb *'"
           [formGroup]="cadastro"
           [controlName]="'nota'"
         >
