--- a/src/app/shared/components/campos/input-number/input-number.component.html
+++ b/src/app/shared/components/campos/input-number/input-number.component.html
@@ -4,7 +4,7 @@
       matInput
       [name]="controlName"
       [formControlName]="controlName"
-      [placeholder]="titulo"
+      [placeholder]="label"
       type="number"
       min="0"
       max="10"
