🚧 refactor: Input select e textarea em componentes

--- a/src/app/shared/components/campos/input-textarea/input-textarea.component.html
+++ b/src/app/shared/components/campos/input-textarea/input-textarea.component.html
@@ -1,1 +1,10 @@
-<p>input-textarea works!</p>
+<div [formGroup]="formGroup">
+  <mat-form-field class="full-width">
+    <textarea
+      matInput
+      [name]="controlName"
+      [formControlName]="controlName"
+      [placeholder]="label"
+    ></textarea>
+  </mat-form-field>
+</div>
