--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -18,17 +18,6 @@
           controlName="urlFoto"
           [formGroup]="cadastro"
         ></dio-input-text>
-        <!-- <mat-form-field class="full-width">
-          <input
-            matInput
-            name="urlFoto"
-            formControlName="urlFoto"
-            placeholder="Link Foto"
-          />
-          <mat-error *ngIf="f.urlFoto.errors?.minlength">
-            Campo precisa possuir pelo menos 10 caracteres
-          </mat-error>
-        </mat-form-field> -->
 
         <dio-input-date
           [controlName]="'dtLancamento'"
@@ -36,34 +25,12 @@
           [label]="'Data de Lançamento *'"
         >
         </dio-input-date>
-        <!-- <mat-form-field class="full-width">
-          <input
-            readonly
-            matInput
-            name="dtLancamento"
-            formControlName="dtLancamento"
-            [matDatepicker]="picker"
-            placeholder="Data de Lançamento *"
-            (click)="picker.open()"
-          />
-          <mat-error *ngIf="f.dtLancamento.errors?.required">
-            A data é obrigatória
-          </mat-error>
-          <mat-datepicker-toggle
-            matSuffix
-            [for]="picker"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field> -->
 
-        <mat-form-field class="full-width">
-          <textarea
-            matInput
-            name="descricao"
-            formControlName="descricao"
-            placeholder="Descrição"
-          ></textarea>
-        </mat-form-field>
+        <dio-input-textarea
+          [controlName]="'descricao'"
+          [formGroup]="cadastro"
+          [label]="'Descrição'"
+        ></dio-input-textarea>
 
         <dio-input-number
           [label]="'Nota IMDb *'"
@@ -71,58 +38,19 @@
           [controlName]="'nota'"
         >
         </dio-input-number>
-        <!-- <mat-form-field class="full-width">
-          <input
-            matInput
-            name="nota"
-            formControlName="nota"
-            placeholder="Nota IMDb *"
-            type="number"
-            min="0"
-            max="10"
-            step="0.1"
-          />
-
-          <mat-error *ngIf="validarCampo(f.nota, 'required')">
-            Nota é obrigatória
-          </mat-error>
-          <mat-error *ngIf="validarCampo(f.nota, 'min')">
-            A nota precisa ser maior ou igual a 0
-          </mat-error>
-          <mat-error *ngIf="validarCampo(f.nota, 'max')">
-            A nota não pode ultrapassar o valor 10
-          </mat-error>
-        </mat-form-field> -->
 
         <dio-input-text
           [titulo]="'Link IMDb'"
           controlName="urlIMDb"
           [formGroup]="cadastro"
         ></dio-input-text>
-        <!-- <mat-form-field class="full-width">
-          <input
-            matInput
-            name="urlIMDb"
-            formControlName="urlIMDb"
-            placeholder="Link IMDb"
-          />
-          <mat-error *ngIf="validarCampo(f.titulo, 'minlength')">
-            Campo precisa possuir pelo menos 10 caracteres
-          </mat-error>
-        </mat-form-field> -->
 
-        <mat-form-field class="full-width">
-          <mat-select placeholder="Gênero" formControlName="genero">
-            <mat-option value="Ação">Açao</mat-option>
-            <mat-option value="Aventura">Aventura</mat-option>
-            <mat-option value="Ficção Científica">Ficção Científica</mat-option>
-            <mat-option value="Romance">Romance</mat-option>
-            <mat-option value="Terror">Terror</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <mat-error *ngIf="validarCampo(f.genero, 'required')">
-          Gênero é obrigatório
-        </mat-error>
+        <dio-input-select
+          [formGroup]="cadastro"
+          [controlName]="'genero'"
+          [label]="'Gênero'"
+        >
+        </dio-input-select>
       </mat-card-content>
       <mat-card-actions>
         <button color="accent" type="submit" mat-raised-button>Salvar</button>
