--- a/src/app/shared/components/campos/input-number/input-number.component.html
+++ b/src/app/shared/components/campos/input-number/input-number.component.html
@@ -6,19 +6,21 @@
       [formControlName]="controlName"
       [placeholder]="label"
       type="number"
-      min="0"
-      max="10"
-      step="0.1"
+      [min]="minValue"
+      [max]="maxValue"
+      [step]="step"
     />
 
     <mat-error *ngIf="validarCampo(formControl, 'required')">
-      Nota é obrigatória
+      {{ controlName }} é obrigatória
     </mat-error>
     <mat-error *ngIf="validarCampo(formControl, 'min')">
-      A nota precisa ser maior ou igual a 0
+      A {{ controlName }} precisa ser maior ou igual a
+      {{ validarCamposService.lengthValidar(formControl, 'min') }}
     </mat-error>
     <mat-error *ngIf="validarCampo(formControl, 'max')">
-      A nota não pode ultrapassar o valor 10
+      A {{ controlName }} não pode ultrapassar o valor
+      {{ validarCamposService.lengthValidar(formControl, 'max') }}
     </mat-error>
   </mat-form-field>
 </div>
