--- a/src/app/shared/components/campos/input-select/input-select.component.html
+++ b/src/app/shared/components/campos/input-select/input-select.component.html
@@ -1,11 +1,9 @@
 <div [formGroup]="formGroup">
   <mat-form-field class="full-width">
     <mat-select [placeholder]="label" [formControlName]="controlName">
-      <mat-option value="Ação">Açao</mat-option>
-      <mat-option value="Aventura">Aventura</mat-option>
-      <mat-option value="Ficção Científica">Ficção Científica</mat-option>
-      <mat-option value="Romance">Romance</mat-option>
-      <mat-option value="Terror">Terror</mat-option>
+      <mat-option *ngFor="let option of options" [value]="option">
+        {{ option }}
+      </mat-option>
     </mat-select>
     <mat-error *ngIf="validarCampo(formControl, 'required')">
       {{ controlName }} é obrigatório
