--- a/src/app/shared/components/campos/input-select/input-select.component.html
+++ b/src/app/shared/components/campos/input-select/input-select.component.html
@@ -6,7 +6,7 @@
       </mat-option>
     </mat-select>
     <mat-error *ngIf="validarCampo(formControl, 'required')">
-      {{ controlName }} é obrigatório
+      {{ label }} é obrigatório
     </mat-error>
   </mat-form-field>
 </div>
