--- a/src/app/shared/components/campos/input-text/input-text.component.html
+++ b/src/app/shared/components/campos/input-text/input-text.component.html
@@ -7,20 +7,16 @@
       [placeholder]="label"
     />
     <mat-error *ngIf="validarCampo(formControl, 'required')">
-      Título é obrigatório
+      {{ label }} é obrigatório
     </mat-error>
     <mat-error *ngIf="validarCampo(formControl, 'minlength')">
       Campo precisa possuir pelo menos
-      {{
-        validarCamposService.lengthValidar(formControl, 'minlength')
-      }}
+      {{ validarCamposService.lengthValidar(formControl, 'minlength') }}
       caracteres
     </mat-error>
     <mat-error *ngIf="validarCampo(formControl, 'maxlength')">
       Campo precisa possuir no máximo
-      {{
-        validarCamposService.lengthValidar(formControl, 'maxlength')
-      }}
+      {{ validarCamposService.lengthValidar(formControl, 'maxlength') }}
       caracteres
     </mat-error>
   </mat-form-field>
