🚧 refactor: Ajustes Alerta

--- a/src/app/shared/components/alerta/alerta.component.html
+++ b/src/app/shared/components/alerta/alerta.component.html
@@ -1,24 +1,24 @@
-<h1 mat-dialog-title>{{ titulo }}</h1>
+<h1 mat-dialog-title>{{ alertaConfig.titulo }}</h1>
 <div mat-dialog-content>
   <p>
-    {{ descricao }}
+    {{ alertaConfig.descricao }}
   </p>
 </div>
 <div mat-dialog-actions>
   <button
     mat-raised-button
-    [color]="btnSuccessColor"
+    [color]="alertaConfig.btnSuccessColor"
     [mat-dialog-close]="true"
     cdkFocusInitial
   >
-    {{ btnSuccessText }}
+    {{ alertaConfig.btnSuccessText }}
   </button>
   <button
-    *ngIf="possuiBtnFechar"
+    *ngIf="alertaConfig.possuiBtnFechar"
     mat-raised-button
-    color="warn"
+    [color]="alertaConfig.btnCancelColor"
     [mat-dialog-close]="false"
   >
-    {{ btnCancelText }}
+    {{ alertaConfig.btnCancelText }}
   </button>
 </div>
