--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
@@ -12,3 +12,20 @@
   max-width: 100%;
   margin: auto;
 }
+
+.search-fields {
+  width: 100%;
+
+  background: #424242;
+  color: white;
+
+  > form {
+    display: block;
+    > mat-card-content {
+      padding: 30px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 32px;
+    }
+  }
+}
