--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
@@ -2,7 +2,7 @@
   padding: 30px;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 16px;
 }
 
@@ -14,18 +14,11 @@
 }
 
 .search-fields {
-  width: 100%;
-
-  background: #424242;
-  color: white;
+  padding: 30px;
 
   > form {
-    display: block;
-    > mat-card-content {
-      padding: 30px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 32px;
-    }
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px;
   }
 }
