--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -26,3 +26,11 @@ body {
 .full-width {
   width: 100%;
 }
+
+.break-line {
+  white-space: pre-line;
+}
+
+.text-center {
+  text-align: center;
+}
