--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.html
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.html
@@ -1,112 +1,53 @@
 <mat-toolbar class="app-title">Filmes Cadastrados</mat-toolbar>
-<div class="home-content">
-  <mat-card class="home-card">
+<mat-card class="search-fields">
+  <form autocomplete="off" novalidate [formGroup]="filtroListagem">
+    <dio-input-text
+      [label]="'Pesquise pelo título do filme'"
+      [controlName]="'pesquisa'"
+      [formGroup]="filtroListagem"
+    ></dio-input-text>
+    <dio-input-select
+      [formGroup]="filtroListagem"
+      [controlName]="'genero'"
+      [label]="'Pesquise pelo gênero do filme'"
+      [options]="generos"
+    >
+    </dio-input-select>
+  </form>
+</mat-card>
+<div
+  *ngIf="filmes.length; else semRegistro"
+  class="home-content"
+  infiniteScroll
+  (scrolled)="onScroll()"
+>
+  <mat-card *ngFor="let filme of filmes" class="home-card">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Angular Material @ngrx</mat-card-title>
-      <mat-card-subtitle>Check this Home</mat-card-subtitle>
+      <mat-card-title>
+        {{ filme.titulo }}
+      </mat-card-title>
+      <mat-card-subtitle>
+        {{ filme.genero || 'Sem gênero' }}
+      </mat-card-subtitle>
     </mat-card-header>
     <img
       mat-card-image
-      src="../assets/images/angular-material-post.png"
-      alt="Angular Material 7"
+      [src]="filme.urlFoto || imgDefault"
+      [alt]="'Pôster de' + filme.titulo"
     />
     <mat-card-content>
-      <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then you
-        can see sidenav content (with the current store value)
+      <p class="break-line">
+        {{
+          filme.descricao || 'Nenhuma descrição para este título foi informada'
+        }}
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button color="accent" (click)="open()" mat-raised-button>OPEN</button>
-    </mat-card-actions>
-  </mat-card>
-
-  <mat-card class="home-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Angular Material @ngrx</mat-card-title>
-      <mat-card-subtitle>Check this Home</mat-card-subtitle>
-    </mat-card-header>
-    <img
-      mat-card-image
-      src="../assets/images/angular-material-post.png"
-      alt="Angular Material 7"
-    />
-    <mat-card-content>
-      <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then you
-        can see sidenav content (with the current store value)
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button color="accent" (click)="open()" mat-raised-button>OPEN</button>
-    </mat-card-actions>
-  </mat-card>
-
-  <mat-card class="home-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Angular Material @ngrx</mat-card-title>
-      <mat-card-subtitle>Check this Home</mat-card-subtitle>
-    </mat-card-header>
-    <img
-      mat-card-image
-      src="../assets/images/angular-material-post.png"
-      alt="Angular Material 7"
-    />
-    <mat-card-content>
-      <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then you
-        can see sidenav content (with the current store value)
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button color="accent" (click)="open()" mat-raised-button>OPEN</button>
-    </mat-card-actions>
-  </mat-card>
-
-  <mat-card class="home-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Angular Material @ngrx</mat-card-title>
-      <mat-card-subtitle>Check this Home</mat-card-subtitle>
-    </mat-card-header>
-    <img
-      mat-card-image
-      src="../assets/images/angular-material-post.png"
-      alt="Angular Material 7"
-    />
-    <mat-card-content>
-      <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then you
-        can see sidenav content (with the current store value)
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button color="accent" (click)="open()" mat-raised-button>OPEN</button>
-    </mat-card-actions>
-  </mat-card>
-
-  <mat-card class="home-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Angular Material @ngrx</mat-card-title>
-      <mat-card-subtitle>Check this Home</mat-card-subtitle>
-    </mat-card-header>
-    <img
-      mat-card-image
-      src="../assets/images/angular-material-post.png"
-      alt="Angular Material 7"
-    />
-    <mat-card-content>
-      <p>
-        Angular Material with @ngrx and lazy loading, click OPEN button then you
-        can see sidenav content (with the current store value)
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button color="accent" (click)="open()" mat-raised-button>OPEN</button>
+      <button color="accent" (click)="open()" mat-raised-button>Abrir</button>
     </mat-card-actions>
   </mat-card>
 </div>
+
+<ng-template #semRegistro>
+  <h1 class="full-width text-center">Nenhum registro encontrado</h1>
+</ng-template>
