--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
@@ -1,26 +1,24 @@
 .home-content {
-  display: flex;
-  flex-wrap: wrap;
-  width: calc(100% - 20px);
-  justify-content: space-between;
-  padding: 10px;
-  .home-card {
-    margin-bottom: 10px;
-  }
+  padding: 30px;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 16px;
 }
 
-@media screen and (min-width: 600px) {
-  .home-content {
-    .home-card {
-      width: calc(50% - 52px);
-    }
-  }
+.mat-card-image {
+  display: block;
+  width: auto;
+  max-width: 100%;
+  margin: auto;
 }
 
-@media screen and (min-width: 1440px) {
-  .home-content {
-    .home-card {
-      width: calc(25% - 52px);
-    }
+.search-fields {
+  padding: 30px;
+
+  > form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px;
   }
 }
