🚧 feat: Navegação para detalhe do filme

--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.html
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.html
@@ -43,7 +43,13 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button color="accent" (click)="open()" mat-raised-button>Abrir</button>
+      <button
+        color="accent"
+        (click)="abrirDetalheFilme(filme.id)"
+        mat-raised-button
+      >
+        Abrir
+      </button>
     </mat-card-actions>
   </mat-card>
 </div>
